--- a/LifeCalc/MainPage.xaml
+++ b/LifeCalc/MainPage.xaml
@@ -7,6 +7,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
+    xmlns:chart="clr-namespace:Telerik.Windows.Controls;assembly=Telerik.Windows.Controls.Chart"
+xmlns:chartEngine="clr-namespace:Telerik.Charting;assembly=Telerik.Windows.Controls.Chart"
     mc:Ignorable="d"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
@@ -47,18 +49,51 @@
         </StackPanel>
         <toolkit:PhoneTextBox x:Name="txtLoanAmt" InputScope="Number" Hint="Loan Amount ($)" Margin="10,10,240,518" Grid.Row="1"/>
         <Grid Margin="12,91,96,444" Grid.Row="1">
-        	<RadioButton x:Name="radTerm15" Content="15" GroupName="radLoanTem" HorizontalAlignment="Left" Margin="96,0,0,0" VerticalAlignment="Top"/>
+            <RadioButton x:Name="radTerm15" Content="15" GroupName="radLoanTem" HorizontalAlignment="Left" Margin="96,0,0,0" VerticalAlignment="Top"/>
             <RadioButton x:Name="radTerm20" Content="20" GroupName="radLoanTem" HorizontalAlignment="Left" Margin="186,0,0,0" VerticalAlignment="Top"/>
             <RadioButton x:Name="radTerm30" Content="30" GroupName="radLoanTem" HorizontalAlignment="Left" Margin="279,0,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.379,0.092"/>
             <RadioButton x:Name="radTerm10" Content="10" GroupName="radLoanTem" HorizontalAlignment="Left" VerticalAlignment="Top" Width="91" Height="72"/>
         </Grid>
         <TextBlock HorizontalAlignment="Left" Margin="389,102,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Height="44" FontSize="32" Text="Years " Foreground="#FF1A37EC"/>
         <toolkit:PhoneTextBox x:Name="txtIntRate" InputScope="Number" Hint="Interest Rate (%)" Margin="240,10,10,518" Grid.Row="1"/>
-        <TextBlock HorizontalAlignment="Left" Margin="43,324,0,0" Grid.Row="1" TextWrapping="Wrap" Text="Monthly Payment" VerticalAlignment="Top"/>
-        <Border BorderBrush="Green" BorderThickness="5" HorizontalAlignment="Left" Height="266" Margin="12,302,0,0" Grid.Row="1" VerticalAlignment="Top" Width="450" CornerRadius="6"/>
-        <TextBlock HorizontalAlignment="Left" Margin="18,405,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="96" RenderTransformOrigin="0.015,0.918" Width="60" Text="$"/>
-        <TextBlock x:Name="tblMortgage" HorizontalAlignment="Left" Margin="77,405,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="96" RenderTransformOrigin="0.015,0.918" Width="363" Text="..."/>
-        <Button x:Name="btnCalc" Content="Calculate" HorizontalAlignment="Left" Margin="141,189,0,0" Grid.Row="1" VerticalAlignment="Top" FontSize="32" Command="Calc" Click="btnCalc_Click"/>
+        <TextBlock HorizontalAlignment="Left" Margin="42,280,0,0" Grid.Row="1" TextWrapping="Wrap" Text="Monthly Payment" VerticalAlignment="Top" FontSize="28"/>
+        <Border BorderBrush="Green" BorderThickness="5" HorizontalAlignment="Left" Height="336" Margin="12,261,0,0" Grid.Row="1" VerticalAlignment="Top" Width="450" CornerRadius="6"/>
+        <TextBlock HorizontalAlignment="Left" Margin="18,457,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="96" RenderTransformOrigin="0.015,0.918" Width="60" Text="$"/>
+        <TextBlock x:Name="tblMortgage" HorizontalAlignment="Left" Margin="77,459,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="96" RenderTransformOrigin="0.015,0.918" Width="363" Text="..."/>
+        <chart:RadPieChart x:Name="pieChart" Margin="264,267,18,179" Grid.Row="1">
+            <chart:PieSeries>
+                <chart:PieSeries.SliceStyles>
+                    <!--<Style TargetType="Path">
+                        <Setter Property="Fill" Value="Orange"/>
+                    </Style>
+
+                    <Style TargetType="Path">
+                        <Setter Property="Fill" Value="Gray"/>
+                    </Style>
+
+                    <Style TargetType="Path">
+                        <Setter Property="Fill" Value="Cyan"/>
+                    </Style>-->
+
+                    <Style TargetType="Path">
+                        <Setter Property="Fill" Value="Red"/>
+                    </Style>
+
+                    <Style TargetType="Path">
+                        <Setter Property="Fill" Value="Green"/>
+                    </Style>
+                </chart:PieSeries.SliceStyles>
+
+                <chart:PieSeries.DataPoints>
+                    <!--<chartEngine:PieDataPoint Value="10"/>
+                    <chartEngine:PieDataPoint Value="4"/>
+                    <chartEngine:PieDataPoint Value="7"/>-->
+                    <chartEngine:PieDataPoint x:Name="pieSliceInterest"/>
+                    <chartEngine:PieDataPoint x:Name="pieSlicePrincipal"/>
+                </chart:PieSeries.DataPoints>
+            </chart:PieSeries>
+        </chart:RadPieChart>
+        <Button x:Name="btnCalc" Content="Calculate" HorizontalAlignment="Left" Margin="145,143,0,0" Grid.Row="1" VerticalAlignment="Top" FontSize="32" Click="btnCalc_Click"/>
 
         <!--ContentPanel - place additional content here-->
 
